8309808: BytecodePrinter prints wrong BSM for invokedynamic